minor text align issue on live

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -190,3 +190,7 @@ p {
     width: 100%;
     height: 100%;
 }
+
+#left {
+    text-align: left;
+}
